--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -48,11 +48,7 @@ class="border container overall comment <%= comment.current_vote ? (comment.curr
         <% end %>
         ><%= comment.user.username %></a>
 
-        <% if comment.has_been_edited? %>
-          edited
-        <% elsif comment.is_from_email? %>
-          e-mailed
-        <% end %>
+        
         <%= raw(time_ago_in_words_label(comment.has_been_edited? ?
           comment.updated_at : comment.created_at).gsub(/^about /, "")) %> ago
       <% end %>
@@ -78,15 +74,9 @@ class="border container overall comment <%= comment.current_vote ? (comment.curr
             |
             <a class="comment_replier">reply</a>
         <% end %>
-
-        <span class="reason">
-          <% if comment.downvotes > 0 && comment.score <= 0 &&
-          comment.user_id == @user.try(:id) %>
-            | <%= comment.vote_summary.downcase %>
-          <% elsif comment.current_vote && comment.current_vote[:vote] == -1 %>
-            | <%= Vote::COMMENT_REASONS[comment.current_vote[:reason]].downcase
-              %>
-          <% end %>
+        <% if @user %>
+        | <%= link_to "flag", flags_url(flaggable_id: comment.id, flaggable_type: "Comment"), method: :post, :data => {:confirm => "Are you sure you want to flag this comment?"} %>
+        <% end %>
         </span>
       <% end %>
       </small>
