--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,5 @@
+<% if comment.is_visable? %>
+
 <a name="c_<%= comment.short_id %>"></a>
 <div id="comment_<%= comment.short_id %>" data-shortid="<%= comment.short_id %>"
 class="border container overall comment <%= comment.current_vote ? (comment.current_vote[:vote] == 1 ?
@@ -97,3 +99,4 @@ class="border container overall comment <%= comment.current_vote ? (comment.curr
   </div>
 </row>
 </div>
+<% end %>
