--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,6 @@
 <footer class="footer">
 <div class="container">
       <span class="pull-right" style="text-align: right">
-      <!--<a href="/moderations" id="footer-color">Moderation</a>
-        |      NEED TO ENABLE MOD ROUTE TO USE-->
         <% if @user && !@user.is_new? &&
         (iqc = InvitationRequest.verified_count) > 0 %>
         <a href="/invitations"id="footer-color">Invitation Queue (<%= iqc %>)</a>
@@ -15,4 +13,18 @@
         |     
       </span>
     </div>
+<% if Rails.env == "production"  %>
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-60792406-1', 'theuptrade.com');
+  ga('send', 'pageview');
+
+</script>
+
+<% end %>
 </footer>
