--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,9 +7,15 @@
         (iqc = InvitationRequest.verified_count) > 0 %>
         <a href="/invitations"id="footer-color">Invitation Queue (<%= iqc %>)</a>
         <% end %>
-        <a href="/privacy"id="footer-color">Privacy</a>
-        |
+        
+
         <a href="/about"id="footer-color">About</a>
+        |
+        <a href="/rules"id="footer-color">Site Rules</a>
+        |
+        <a href="/tos"id="footer-color">Terms of Use</a>
+        |
+        <a href="/privacy"id="footer-color">Privacy Policy</a>
         |     
       </span>
     </div>
