--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <% if comment.is_visable? %>
+<% unless comment.story == nil %>
 
 <a name="c_<%= comment.short_id %>"></a>
 <div id="comment_<%= comment.short_id %>" data-shortid="<%= comment.short_id %>"
@@ -23,8 +24,6 @@ class="border container overall comment <%= comment.current_vote ? (comment.curr
         <a class= "btn btn-default down" href="/login"><div class="arrow-down"></div></a>
       <% end %>
     </div>
-
-
 
 
   <div class="col-xs-9">
@@ -99,4 +98,5 @@ class="border container overall comment <%= comment.current_vote ? (comment.curr
   </div>
 </row>
 </div>
+<% end %>
 <% end %>
