really fixed about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -31,7 +31,7 @@ The UpTrade is where good traders, analysts, bloggers, and investors rank and di
 </p>
 
 <h3 class="center">Who's behind The UpTrade and why?</h3>
-<p><a href="http://www.theuptrade.com/u/Chris">Chris</a> built The UpTrade to make it easier to discover and share good content in the realm of finance. The UpTrade leverages its community to surface the best content, and come to a consensus view (where possible) on a particular piece of content via community voting. The UpTrade takes inspiration from Product Hunt, <a href="http//:www.reddit.com">Reddit</a>, <a href="http://www.hotmail.com">Hacker News</a>, and <a href="http://lobste.rs">Lobste.rs</a>. The source code for The UpTrade can be seen at xxxxxx, and borrows much of the source code from Lobste.rs (Thanks!). </p>
+<p><a href="http://www.theuptrade.com/u/Chris">Chris</a> built The UpTrade to make it easier to discover and share good content in the realm of finance. The UpTrade leverages its community to surface the best content, and come to a consensus view (where possible) on a particular piece of content via community voting. The UpTrade takes inspiration from <a href="http://producthunt.com">Product Hunt</a>, <a href="reddit.com">Reddit</a>, <a href="news.ycombinator.com/">Hacker News</a>, and <a href="http://lobste.rs">Lobste.rs</a>. The source code for The UpTrade borrows much of the source code from Lobste.rs (Thanks!) </p>
 
 <h3 class="center">FAQ</h3>
 	<p>How did you decide on the <strong> Buzz </strong> ranking method? 
