fixed about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -14,7 +14,7 @@ The UpTrade is where good traders, analysts, bloggers, and investors rank and di
 </p>
 
 <p>
-<strong>Bad submissions:</strong> links to breaking news, shortsighted analysis, thoughtless questions, 'gut' feel trade ideas. If you think there might be a chance your submission is of poor quality, it probably is.  Users are encouraged to <strong>flag</strong> bad content, if you submit enough bad links you will lose the privledge to submit. 
+<strong>Bad submissions:</strong> links to breaking news, shortsighted analysis, thoughtless questions, 'gut' feeling trade ideas. If you think there might be a chance your submission is of poor quality, it probably is.  Users are encouraged to <i>flag</i> bad content, if you submit enough bad links you will lose privledge to submit. 
 </p>
 
 <h3 class="center">How does ranking work?</h3>
@@ -27,7 +27,7 @@ The UpTrade is where good traders, analysts, bloggers, and investors rank and di
 <p>
 <strong>Upvotes:</strong> When users like and agree with your submission, they upvote it. </p>
 <p><strong>Downvotes:</strong> When users don't like or disagree with your submission, they downvote it. </p>
-<p><strong>Flag:</strong> When users don't think your link is relevant, is really bad, spammy, or off-base in anyway, they flag it. Moderators review all flags and determine whether or not to remove the story. </p>
+<p><strong>Flag:</strong> When users don't think your link is relevant, is of poor quality, spam, or off-base in anyway, they flag it. Moderators review all flags and determine whether or not to remove the story. </p>
 </p>
 
 <h3 class="center">Who's behind The UpTrade and why?</h3>
@@ -35,9 +35,9 @@ The UpTrade is where good traders, analysts, bloggers, and investors rank and di
 
 <h3 class="center">FAQ</h3>
 	<p>How did you decide on the <strong> Buzz </strong> ranking method? 
-		<p style="padding-left: 15px">Other similar websites rank their content based on the 'most liked' criteria. The current ranking mechanism for The UpTrade is a little different, it is desiged to rank links based on how much web-traffic that link is experiencing by counting total votes + comments + clicks. As a separate measure, a links polarity is displayed, this is intended to give a quick indication of whether users agree or disagree with the research. This is an important distinction because financial research/trade ideas can be good and thoughful, however you can still disagree with the analysis.  </p>
+		<p style="padding-left: 15px">Other similar websites rank their content based on the 'most liked' criteria. The current ranking mechanism for The UpTrade is a little different, it is designed to rank links based on how much web-traffic that link is experiencing by counting total votes + comments + clicks. As a separate measure, a link's polarity is displayed. This feature is intended to give a quick indication of whether users agree or disagree with the research. This is an important distinction because financial research and trade ideas can be of good quality and thoughful, however you can still disagree with the analysis.  </p>
 	<p>What are<strong> Tags </strong> and how do they work?</p> 
-		<p style="padding-left: 15px">When links are submitted, they must contain at least one tag. Tags are used to categorize content, you can click on a tag to view all the stories that are under that topic. Use tags like you would Twitter hashtags. Right now users are able to create their own tags, but to enforce some rigidity and to avoid from different threads being created for snytax differences, we may enforce certain tags. I.e. to avoid the situation where EURUSD is a tag, and EUR/USD is a tag.</p>
+		<p style="padding-left: 15px">When links are submitted, they must contain at least one tag that are used to categorize content. By clicking on a tag, you can view all the stories that are under that topic. Use tags in the same way that you would use Twitter hashtags. Right now users are able to create their own tags, but to enforce some rigidity and to avoid from different threads being created for snytax differences, we may eventually enforce certain tags. I.e. to avoid the situation where EURUSD is a tag, and EUR/USD is a tag.</p>
 
 <h3 class="center">Contact</h3>
 <p>Any questions or concerns, please contact chris@theuptrade.com. If you're looking for an invite to submit content, please request an invite through the <a href="/login">login</a> page. 
