--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,6 +1,6 @@
-<div class="box" id="story_box">
-  <div class="legend">
-    Edit Story
+<div class="container" id="story_box">
+  <div class="col-xs-8">
+    <h2>Edit Story</h2>
   </div>
 
   <%= form_for @story, :url => story_url(@story.short_id),
@@ -9,16 +9,9 @@
       :f => f } %>
 
     <% if @user.is_moderator? %>
-      <div class="box">
-        <div class="boxline">
-          <%= f.label :merge_story_short_id, "Merge Into:",
-            :class => "required" %>
-          <%= f.text_field :merge_story_short_id, :autocomplete => "off",
-            :placeholder => "Short id of story into which this story " <<
-            "be merged" %>
-        </div>
+      <div class="col-xs-8">
         <% if @story.user_id != @user.id %>
-          <div class="boxline">
+          <div class="col-xs-8">
             <%= f.label :moderation_reason, "Mod Reason:",
               :class => "required" %>
             <%= f.text_field :moderation_reason, :autocomplete => "off" %>
