--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,6 +11,8 @@
 
         <a href="/about"id="footer-color">About</a>
         |
+        <a href="http://theuptrade.tumblr.com/" id="footer-color">Blog</a>
+        |
         <a href="/tos"id="footer-color">Terms of Use</a>
         |
         <a href="/privacy"id="footer-color">Privacy Policy</a>
